# lirer

./: .gitignore  package.json  pnpm-lock.yaml
.cursor/rules/: project.mdc
.taskmaster/docs/: prd.txt
cursor/rules/: project.mdc
src/: App.tsx  README.md  main.tsx
src-tauri/: .gitignore  Cargo.toml  entities.sh  migrate.sh  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20220101_000001_create_feeds_table.rs  m20240101_000002_create_feed_entries_table.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: feed_commands.rs  feed_entry_commands.rs  mod.rs
src-tauri/src/entities/: feed.rs  feed_entry.rs  mod.rs  prelude.rs
src-tauri/src/models/: async_feed_fetcher.rs  feed_parser.rs  mod.rs  requests.rs  responses.rs  state.rs
src/components/feeds/: FeedForm.tsx  FeedItem.tsx  FeedList.tsx  LastUpdatedIndicator.tsx  PeriodicRefreshSettings.tsx  RefreshButton.tsx  RefreshProgressModal.tsx  StatusMessage.tsx  index.ts
src/components/layout/: PageLayout.tsx
src/hooks/: index.ts  useFeedManagement.ts  useFeeds.ts  useFeedsApi.ts  usePeriodicRefresh.ts  useRefreshProgress.ts
src/lib/: activityDetector.ts  feedUtils.ts  settings.ts
src/services/: feedApi.ts
src/types/: feed.ts
